namespace APE.Core.Interfaces
{
    public interface IViscosity
    {
        double Value { get; set; }
    }
}
